# agent-core

./: .env.example  .gitattributes  .gitignore  .gitmodules  AGENTS.md  BROWSER_OPTIONS.md  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  MODELS_AND_PROVIDERS_AUDIT.md  MODEL_BLOCK_SYSTEM.md  README.md  SECURITY.md  TESTING.md  UPSTREAM_TRIAGE_122-221.md  agent-core  agent-core.json  docker-compose.yml  flake.nix  install  package-lock.json  package.json  sst.config.ts  test-hive6.ts  test-hive9-browser-v2.ts  test-hive9-browser.ts  tsconfig.json  tsup.config.ts  turbo.json
.Jules/: palette.md
.agent-core/: agent-core.jsonc  hive9-test-report.json  model-block-list.jsonc
.jules/: bolt.md  sentinel.md
.opencode/: opencode.jsonc
.wip-surface/: HIVE_MIND_CONTEXT_TRACKING.md  hive10-browser-test.ts  hive10-test-report.md  surface.ts
.wwebjs_cache/: 2.3000.1031850069.html
docs/: ALPHA_LAUNCH_CHECKLIST.md  ALPHA_READINESS_ISSUES.md  ALPHA_RELEASE_TODO.md  ALPHA_ROLLBACK_PLAN.md  ALPHA_TEST_STATUS.md  ARCHITECTURE-FIXES-2026-01.md  ARCHITECTURE.md  BUGS.md  CLAWDBOT_SYNC_PLAN.md  CROSS-PLATFORM.md  DESKTOP_GPUI_ROADMAP.md  DIAGNOSTICS_PLAN.md  ENVIRONMENT_VARIABLES.md  IMPROVEMENTS.md  ISSUE_LABELS.md  LOGGING.md  MCP_TOOLS_ARCHITECTURE.md  OPS.md  PROVIDERS.md  ROADMAP.md  TECHNICAL-DEBT-TODO-v2.md  TODO-LLM-CHAIN-FIXES.md  TUI-PARAMETER-SETTINGS-DESIGN.md  UPSTREAM-SYNC.md  UPSTREAM_POLICY.md  USER_GUIDE.md
github/: README.md  action.yml  index.ts  package.json
infra/: stage.ts
inworld/: graph.ts  package.json
nix/: desktop.nix  hashes.json  (+2 more)
(+396 files in other folders)
