[workspace]
resolver = "3"
members = [
    "packages/desktop-gpui",
    "packages/stanley-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Adolago"]
license = "MIT"
repository = "https://github.com/adolago/agent-core"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Testing
tempfile = "3.14"

# Directories
directories = "6.0"
